force-app/main/default/objects/SmartFridge__c/SmartFridge__c.object-meta.xml
<CustomObject>
    <label>SmartFridge</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>SmartFridgeId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartFridges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>