force-app/main/default/objects/SmartFridge__c/fields/devicId__c.field-meta.xml
<CustomField>
    <fullName>devicId__c</fullName>
    <externalId>true</externalId>
    <label>deviceId</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>