force-app/main/default/objects/SmartFridge__c/fields/door__c.field-meta.xml
<CustomField>
    <fullName>door__c</fullName>
    <label>door</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>