force-app/main/default/objects/SmartFridge__c/fields/Temprature__c.field-meta.xml
<CustomField>
    <fullName>Temprature__c</fullName>
    <label>Temprature</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>