force-app/main/default/objects/SmartFridge__c/fields/ts__c.field-meta.xml
<CustomField>
    <fullName>ts__c</fullName>
    <label>ts</label>
    <type>DateTime</type>
</CustomField>